# privit-img

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  configure.sh  packages.txt  pkgsdownload.py
cmake/: FindLibYAML.cmake
include/: config.h.in  version.h.in
src/: main.c  privit.cpp
